--- a/curriculo.html
+++ b/curriculo.html
@@ -1,2 +1,21 @@
-
-copy con curriculo.html
+<html>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Currículo Anna Nachtigall</title>
+    </head>
+    <body>
+        <hr>
+        <section>
+            <p>
+            <h1>
+                <img src="https://scontent.fpoa38-1.fna.fbcdn.net/v/t1.6435-9/69661272_159664881820245_6514408641393590272_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=174925&_nc_eui2=AeHVVneZi64few_Lqogd0j-iQb0zrXu93uJBvTOte73e4kpMD2zGSWJLvEu_q68SBYdrXfdMlWVI1sQ6wESo8_sf&_nc_ohc=RQtGU38LI-cAX_0W1YZ&_nc_ht=scontent.fpoa38-1.fna&oh=7d20e9cc6943ed5677e06cd340ae9a58&oe=60A8F596" width="160px" align="left" border=3> <strong>Anna Lauren de Mello Nachtigall</strong> <br>
+                <h2 id="ttl1">Brasileira, 23 anos</h2>
+                <h2 id="ttl2">Telefone: </h2>
+                <h2 id="ttl3">Endereço: </h2>
+            </h1>
+            </p>
+            <hr>
+        </section>
+        
+    </body>
+</html>
