--- a/curriculo.html
+++ b/curriculo.html
@@ -4,18 +4,62 @@
         <title>Currículo Anna Nachtigall</title>
     </head>
     <body>
-        <hr>
         <section>
+            <hr>
             <p>
             <h1>
-                <img src="https://scontent.fpoa38-1.fna.fbcdn.net/v/t1.6435-9/69661272_159664881820245_6514408641393590272_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=174925&_nc_eui2=AeHVVneZi64few_Lqogd0j-iQb0zrXu93uJBvTOte73e4kpMD2zGSWJLvEu_q68SBYdrXfdMlWVI1sQ6wESo8_sf&_nc_ohc=RQtGU38LI-cAX_0W1YZ&_nc_ht=scontent.fpoa38-1.fna&oh=7d20e9cc6943ed5677e06cd340ae9a58&oe=60A8F596" width="160px" align="left" border=3> <strong>Anna Lauren de Mello Nachtigall</strong> <br>
-                <h2 id="ttl1">Brasileira, 23 anos</h2>
-                <h2 id="ttl2">Telefone: </h2>
-                <h2 id="ttl3">Endereço: </h2>
+                <img src="https://scontent.fpoa38-1.fna.fbcdn.net/v/t1.6435-9/69661272_159664881820245_6514408641393590272_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=174925&_nc_eui2=AeHVVneZi64few_Lqogd0j-iQb0zrXu93uJBvTOte73e4kpMD2zGSWJLvEu_q68SBYdrXfdMlWVI1sQ6wESo8_sf&_nc_ohc=RQtGU38LI-cAX_0W1YZ&_nc_ht=scontent.fpoa38-1.fna&oh=7d20e9cc6943ed5677e06cd340ae9a58&oe=60A8F596" width="180px" align="left" border=3> <strong>Anna Lauren de Mello Nachtigall</strong> <br>
+                <h3 id="ttl1">Brasileira, 23 anos.</h3>
+                <h3 id="ttl2">E-mail: </h3>
+                <h3 id="ttl3">Telefone: </h3>
+                <h3 id="ttl4">Endereço: </h3>
             </h1>
             </p>
+        </section>
+        <section>
+        <hr>
+
+        <h1>
+            Resumo:
+        </h1>
+        <p>Tenho ampla experiência no setor comercial, com foco em venda direta. Possuo facilidade na utilização de sistemas de informática e sou bastante comunicativa. Busco experiência nas áreas de comunicação/marketing e TI para agregar a minha faculdade e meu curso técnico.</p>
+        <hr>
+        </section>
+        <section>
+            <h1>
+                Experiência acadêmica
+            </h1>
+            <ul>
+                <li>Centro Universitário Leonardo da Vinci (UNIASSELVI)</li>
+                <p>Publicidade e Propaganda | Ago 2020 até o momento</p>
+                <li>Escola Técnica Estadual Monteiro Lobato (CIMOL)</li>
+                <p>Técnico em Informática | Março 2020 até o momento</p>
+                <li>Universidade Federal de Pelotas (UFPEL)</li>
+                <p>Letras Português - Alemão | Mar 2016 - Jul 2017 (interrompido) </p>
+            </ul>
             <hr>
         </section>
-        
+        <section>
+            <h1>
+                Experiência Profissional
+            </h1>
+            <ul>
+                <li>Estágio Suporte TI</li>
+                <p>Prefeitura Municipal de Sapiranga. | Jan 2021 - Atualmente <br>
+                    - Manutenção hardware, software (Linux Debian 9/10 e Windows 7/10) <br>
+                    - Suporte aos usuários nas demandas helpdesk <br>
+                    - Tarefas na área de desenvolvimento gráfico de sites e aplicativos</p>
+                <li>Analista de crédito</li>
+                <p>Crisdu Moda Íntima – Catálogo Favorita | Mar 2020 - Jul 2020 <br>
+                    - Analisar CPF ou CNPJ de possíveis clientes e colaboradores, seguindo parâmetros impostos pela empresa. <br>
+                    - Fazer cadastro no sistema
+                </p>
+                <li>Atendente TMK</li>
+                <p>Crisdu Moda Íntima – Catálogo Favorita | Set 2017 - Mar 2020 <br>
+                    - Atendimento ao cliente, prospecção, atualização de cadastro, atendimento financeiro, protocolos em sistema (troca, cancelamento, alteração de boleto) 
+                </p>
+            </ul>
+            <hr>
+        </section>
     </body>
 </html>
