--- a/curriculo.html
+++ b/curriculo.html
@@ -2,59 +2,96 @@
     <head>
         <meta charset="UTF-8" />
         <title>Currículo Anna Nachtigall</title>
+        <style>
+            body{
+                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            }
+            h1{
+                color: #c45454;
+            }
+            h4{
+                color: #c45454;
+            }
+            h3{
+                color: #c45454;
+            }
+            hr{
+                color: #008080;
+            }
+            #destaque{
+                color: #008080;
+            }
+
+        </style>
     </head>
-    <body>
+    <body style="background: #f7f3f3 ">
         <section>
             <hr>
             <p>
             <h1>
-                <img src="https://scontent.fpoa38-1.fna.fbcdn.net/v/t1.6435-9/69661272_159664881820245_6514408641393590272_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=174925&_nc_eui2=AeHVVneZi64few_Lqogd0j-iQb0zrXu93uJBvTOte73e4kpMD2zGSWJLvEu_q68SBYdrXfdMlWVI1sQ6wESo8_sf&_nc_ohc=RQtGU38LI-cAX_0W1YZ&_nc_ht=scontent.fpoa38-1.fna&oh=7d20e9cc6943ed5677e06cd340ae9a58&oe=60A8F596" width="180px" align="left" border=3> <strong>Anna Lauren de Mello Nachtigall</strong> <br>
-                <h3 id="ttl1">Brasileira, 23 anos.</h3>
-                <h3 id="ttl2">E-mail: </h3>
-                <h3 id="ttl3">Telefone: </h3>
-                <h3 id="ttl4">Endereço: </h3>
+                <img src="https://scontent.fpoa38-1.fna.fbcdn.net/v/t1.6435-9/72642221_168347467618653_3940301901857292288_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=174925&_nc_eui2=AeG7b1YJU1yQ0-6YVrvfhvid9QgdiAmqsT71CB2ICaqxPsxS3E04zMG8DIjrID35CgCpk3Y4vdVT2rX6i3b6vft2&_nc_ohc=AfSbz0cnn6kAX_ReNAA&_nc_ht=scontent.fpoa38-1.fna&oh=e04b2f193e07c272256a82e18796a8f7&oe=60AA2322" width="180px" align="left" border=3> <strong>Anna Lauren de Mello Nachtigall</strong> <br>
+                <h4>Brasileira, 23 anos.</h4>
+                <h4>E-mail: </h4>
+                <h4>Telefone: </h4>
+                <h4>Endereço: </h4>
             </h1>
             </p>
         </section>
         <section>
-        <hr>
-
-        <h1>
-            Resumo:
-        </h1>
-        <p>Tenho ampla experiência no setor comercial, com foco em venda direta. Possuo facilidade na utilização de sistemas de informática e sou bastante comunicativa. Busco experiência nas áreas de comunicação/marketing e TI para agregar a minha faculdade e meu curso técnico.</p>
-        <hr>
-        </section>
-        <section>
+            <hr>
             <h1>
-                Experiência acadêmica
+                Resumo:
             </h1>
-            <ul>
-                <li>Centro Universitário Leonardo da Vinci (UNIASSELVI)</li>
-                <p>Publicidade e Propaganda | Ago 2020 até o momento</p>
-                <li>Escola Técnica Estadual Monteiro Lobato (CIMOL)</li>
-                <p>Técnico em Informática | Março 2020 até o momento</p>
-                <li>Universidade Federal de Pelotas (UFPEL)</li>
-                <p>Letras Português - Alemão | Mar 2016 - Jul 2017 (interrompido) </p>
-            </ul>
+            <p>Tenho ampla experiência no setor comercial, com foco em venda direta. Possuo facilidade na utilização de sistemas de informática e sou bastante comunicativa. Busco experiência nas áreas de comunicação/marketing e TI para agregar a minha faculdade e meu curso técnico.</p>
             <hr>
         </section>
         <section>
             <h1>
-                Experiência Profissional
+                Habilidades:
+            </h1>
+                <ul>
+                <li id="destaque">Adobe XD: básico</li> <br>
+                <li id="destaque">GIMP: básico</li> <br>
+                <li id="destaque">Inglês</li>
+                <p> Speaking/Writing: intermediário
+                <p> Reading/Listening: avançado
+                <li id="destaque">Alemão</li>
+                <p> Hören/Lesen: básico
+                <p> Sprechen/Schreiben: básico
+                </ul>
+            </p>
+            <hr>
+        </section>
+        <section>
+            <h1>
+                Experiência acadêmica:
+            </h1>
+                <ul>
+                <li id="destaque">Centro Universitário Leonardo da Vinci (UNIASSELVI)</li>
+                <p>Publicidade e Propaganda | Ago 2020 até o momento</p>
+                <li id="destaque">Escola Técnica Estadual Monteiro Lobato (CIMOL)</li>
+                <p>Técnico em Informática | Março 2020 até o momento</p>
+                <li id="destaque">Universidade Federal de Pelotas (UFPEL)</li>
+                <p>Letras Português - Alemão | Mar 2016 - Jul 2017 (interrompido) </p>
+                </ul>
+            <hr>
+        </section>
+        <section>
+            <h1>
+                Experiência Profissional:
             </h1>
             <ul>
-                <li>Estágio Suporte TI</li>
-                <p>Prefeitura Municipal de Sapiranga. | Jan 2021 - Atualmente <br>
+                <li id="destaque">Estágio Suporte TI</li>
+                <p>Prefeitura Municipal de Sapiranga | Jan 2021 - Atualmente <br>
                     - Manutenção hardware, software (Linux Debian 9/10 e Windows 7/10) <br>
                     - Suporte aos usuários nas demandas helpdesk <br>
                     - Tarefas na área de desenvolvimento gráfico de sites e aplicativos</p>
-                <li>Analista de crédito</li>
+                <li id="destaque">Analista de crédito</li>
                 <p>Crisdu Moda Íntima – Catálogo Favorita | Mar 2020 - Jul 2020 <br>
                     - Analisar CPF ou CNPJ de possíveis clientes e colaboradores, seguindo parâmetros impostos pela empresa. <br>
                     - Fazer cadastro no sistema
                 </p>
-                <li>Atendente TMK</li>
+                <li id="destaque">Atendente TMK</li>
                 <p>Crisdu Moda Íntima – Catálogo Favorita | Set 2017 - Mar 2020 <br>
                     - Atendimento ao cliente, prospecção, atualização de cadastro, atendimento financeiro, protocolos em sistema (troca, cancelamento, alteração de boleto) 
                 </p>
